# michaela-perez

./: README.md  blog-poem-display.html  blog-poetry.html  index.html  package-lock.json  package.json
.devcontainer/php/: docker-compose.yml
js/: get_poem.js  health-info.html
mail/: get_poem.php
py/: doc.py  google-oauth-secret.json  poem-sheet.json  pyproject.toml  sheet.py
